--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     black
+    flake8
     py{35,36,37,38,py3}
 
 [testenv]
@@ -11,3 +12,8 @@ commands=
 [testenv:black]
 deps = black
 commands = {envbindir}/black --target-version py35 --check --diff .
+
+[testenv:flake8]
+deps = flake8
+commands = {envbindir}/flake8
+skip_install = true
